--- a/cangjie5_ext-g.dict.yaml
+++ b/cangjie5_ext-g.dict.yaml
@@ -72,7 +72,7 @@ encoder:
 𰀦	rrrlr
 𰀧	vlbgr
 𰀨	wfll
-𰀩	qmqm
+𰀩	ygyg
 𰀪	hh
 𰀫	hn
 𰀬	nsvk
@@ -679,7 +679,7 @@ encoder:
 𰊅	gnuy
 𰊆	ghke
 𰊇	erg
-𰊈	vug
+𰊈	iig
 𰊉	ibg
 𰊊	gtvi
 𰊋	gstu
@@ -1012,7 +1012,7 @@ encoder:
 𰏒	lblb
 𰏓	lbpsm
 𰏔	lbyhn
-𰏕	lbiq
+𰏕	lbij
 𰏖	lbhio
 𰏗	lblbb
 𰏘	fbe
@@ -1519,7 +1519,7 @@ encoder:
 𰗍	bytj
 𰗎	btkt
 𰗏	kbggu
-𰗐	dv
+𰗐	dl
 𰗑	ed
 𰗒	de
 𰗓	di
@@ -2106,7 +2106,7 @@ encoder:
 𰠘	vmyod
 𰠙	lnhlo
 𰠚	lnyhs
-𰠛	lniq
+𰠛	lnij
 𰠜	lnph
 𰠝	lnive
 𰠞	lnmlk
@@ -2130,7 +2130,7 @@ encoder:
 𰠰	hqmf
 𰠱	hqbk
 𰠲	hqnom
-𰠳	hqqm
+𰠳	hqyg
 𰠴	hqjpu
 𰠵	hqiav
 𰠶	hqpni
@@ -2396,7 +2396,7 @@ encoder:
 𰤺	wubt
 𰤻	llbt
 𰤼	aabt
-𰤽	mqbt
+𰤽	mjbt
 𰤾	bbbt
 𰤿	lubt
 𰥀	bubt
@@ -2448,7 +2448,7 @@ encoder:
 𰥮	buumj
 𰥯	bucip
 𰥰	hupi
-𰥱	buoqk
+𰥱	buoo
 𰥲	yvbuu
 𰥳	buiyr
 𰥴	bueyt
@@ -2509,7 +2509,7 @@ encoder:
 𰦫	mree
 𰦬	mree
 𰦭	mrikp
-𰦮	mrkns
+𰦮	mrkus
 𰦯	mrymy
 𰦰	mreq
 𰦱	rvmr
@@ -2727,7 +2727,7 @@ encoder:
 𰪅	hmgt
 𰪆	hqhr
 𰪇	hmcsh
-𰪈	hdbm
+𰪈	hdam
 𰪉	hyrf
 𰪊	hopl
 𰪋	hkhi
@@ -3142,7 +3142,7 @@ encoder:
 𰰤	tsk
 𰰥	tuu
 𰰦	tfh
-𰰧	thv
+𰰧	lyhv
 𰰨	top
 𰰩	tyj
 𰰪	tng
@@ -3234,7 +3234,7 @@ encoder:
 𰲀	takg
 𰲁	thdo
 𰲂	tbfm
-𰲃	togt
+𰲃	lyogt
 𰲄	tyjsl
 𰲅	tykm
 𰲆	tejr
@@ -3263,7 +3263,7 @@ encoder:
 𰲝	hypb
 𰲞	yni
 𰲟	ynhsm
-𰲠	iqypu
+𰲠	ijypu
 𰲡	ypbme
 𰲢	yponr
 𰲣	ypskr
@@ -3282,7 +3282,7 @@ encoder:
 𰲰	liop
 𰲱	yslmi
 𰲲	liiks
-𰲳	liiq
+𰲳	liij
 𰲴	iplmi
 𰲵	lieq
 𰲶	linom
@@ -3529,7 +3529,7 @@ encoder:
 𰶧	momje
 𰶨	mobbu
 𰶩	fonmo
-𰶪	modbm
+𰶪	modam
 𰶫	motol
 𰶬	mofdv
 𰶭	monlb
@@ -4275,7 +4275,7 @@ encoder:
 𱂑	yahom
 𱂒	yawlb
 𱂓	yaohr
-𱂔	hsmbc
+𱂔	msmbc
 𱂕	kjmbc
 𱂖	fnmbc
 𱂗	tgmbc
@@ -4371,7 +4371,7 @@ encoder:
 𱃱	nvonu
 𱃲	nvsk
 𱃳	nvmf
-𱃴	nvjy
+𱃴	nvyy
 𱃵	nvlbk
 𱃶	nvwo
 𱃷	nvfq
@@ -4844,7 +4844,7 @@ encoder:
 𱋊	qedj
 𱋋	qegi
 𱋌	qehd
-𱋍	qeqm
+𱋍	qeyg
 𱋎	qejc
 𱋏	qecr
 𱋐	qetw
@@ -4870,7 +4870,7 @@ encoder:
 𱋤	qenhk
 𱋥	nkqme
 𱋦	qeow
-𱋧	qetgm
+𱋧	qetkm
 𱋨	qeteh
 𱋩	qehjo
 𱋪	qeycb
@@ -4945,7 +4945,6 @@ encoder:
 𱌯	yuir
 𱌰	yujpu
 𱌱	yulwp
-
 𱌲	foymu
 𱌳	yubkq
 𱌴	yudt
